--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,14 @@ compileTestJava{
     options.encoding = "UTF-8"
 }
 
-def selenideVersion = "6.13.0",
+def selenideVersion = "6.12.4",
     allureVersion = "2.19.0",
     jUnitVersion = "5.9.2",
     restAssuredVersion = "5.3.0"
 
 dependencies {
     testImplementation (
-            "com.codeborne:selenide:6.12.4",
+            "com.codeborne:selenide:$selenideVersion",
             "org.junit.jupiter:junit-jupiter:$jUnitVersion",
             "com.github.javafaker:javafaker:1.0.2",
             "com.fasterxml.jackson.core:jackson-core:2.13.1",
@@ -56,6 +56,7 @@ tasks.withType(JavaCompile) {
 }
 tasks.withType(Test) {
     useJUnitPlatform()
+    systemProperties(System.getProperties())
 }
 
 test {
