added-jenkins-params

--- a/src/test/resources/properties/remote.properties
+++ b/src/test/resources/properties/remote.properties
@@ -1,5 +1,6 @@
 browser = CHROME
 browserVersion = 100
 baseUrl = https://arzamas.academy
-isRemoteWebDriver = true
-remoteURL = https://user1:1234@selenoid.autotests.cloud/wd/hub https://user1:1234@selenoid.autotests.cloud/wd/hub
+isRemoteWebDriver = false
+remoteURL = https://user1:1234@selenoid.autotests.cloud/wd/hub
+browserSize = 1920x1080
