--- a/src/test/resources/properties/log4j.properties
+++ b/src/test/resources/properties/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d [%t] %-5p %c{1} - %m%n
 
 # Set the logger for your CoursesPage class to INFO level
 log4j.logger.pages.CoursesPage.java=INFO
-log4j.logger.tests.arzamas.AuthorizationAPITests.java=INFO
-
+log4j.logger.tests.api.arzamas.AuthorizationAPITests.java=INFO
+log4j.logger.tests.end2end.arzamas.SubPurchaseTests.java=INFO
 # Redirect SLF4J loggers to Log4j
 log4j.logger.org.slf4j=ERROR
