added-jenkins-params

--- a/src/test/resources/properties/remote.properties
+++ b/src/test/resources/properties/remote.properties
@@ -4,3 +4,4 @@ baseUrl = https://arzamas.academy
 isRemoteWebDriver = false
 remoteURL = https://user1:1234@selenoid.autotests.cloud/wd/hub
 browserSize = 1920x1080
+browserBinary = "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
