--- a/src/test/resources/properties/remote.properties
+++ b/src/test/resources/properties/remote.properties
@@ -2,6 +2,8 @@ browser = CHROME
 browserVersion = 100
 baseUrl = https://arzamas.academy
 isRemoteWebDriver = false
-remoteURL = https://user1:1234@selenoid.autotests.cloud/wd/hub
+remoteURL = selenoid.autotests.cloud
+password = 1234
 browserSize = 1920x1080
-browserBinary = "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
+browserBinary = /Applications/Google Chrome.app/Contents/MacOS/Google Chrome
+
