--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,6 @@ plugins {
 repositories {
     mavenCentral()
 }
-compileTestJava{
-    options.encoding = "UTF-8"
-}
 
 def selenideVersion = "6.16.1",
     allureVersion = "2.19.0",
@@ -16,12 +13,11 @@ def selenideVersion = "6.16.1",
     restAssuredVersion = "5.3.0"
 
 dependencies {
-    testImplementation (
+    testImplementation(
             "com.codeborne:selenide:$selenideVersion",
             "org.junit.jupiter:junit-jupiter:$jUnitVersion",
             "com.github.javafaker:javafaker:1.0.2",
             "com.fasterxml.jackson.core:jackson-core:2.13.1",
-            "com.codeborne:pdf-test:1.8.1",
             "io.qameta.allure:allure-selenide:2.22.0",
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "io.rest-assured:rest-assured:$restAssuredVersion",
@@ -36,8 +32,12 @@ dependencies {
             "org.slf4j:slf4j-api:2.0.0-alpha4",
             "org.slf4j:slf4j-log4j12:2.0.0-alpha4",
             "com.fasterxml.jackson.core:jackson-core:2.13.1",
-            'com.fasterxml.jackson.core:jackson-databind:2.13.1' //удалить
+            "com.fasterxml.jackson.core:jackson-databind:2.13.1"
     )
+}
+
+compileTestJava {
+    options.encoding = "UTF-8"
 }
 
 allure {
@@ -65,25 +65,25 @@ test {
     useJUnitPlatform()
 }
 
-task ArzamasTests (type: Test){
-    useJUnitPlatform{
-        includeTags("API","e2e")
+task ArzamasTests(type: Test) {
+    useJUnitPlatform {
+        includeTags("API", "e2e")
         excludeTags("Support", "mobile")
     }
 }
-task ArzamasAPI (type: Test){
-    useJUnitPlatform{
+task ArzamasAPI(type: Test) {
+    useJUnitPlatform {
         includeTags("API")
         excludeTags("Support")
     }
 }
-task ArzamasE2E (type: Test){
-    useJUnitPlatform{
+task ArzamasE2E(type: Test) {
+    useJUnitPlatform {
         includeTags("e2e")
         excludeTags("Support")
     }
 }
-task ArzamasMobile (type: Test) {
+task ArzamasMobile(type: Test) {
     useJUnitPlatform {
         includeTags("mobile")
         excludeTags("Support")
