--- a/src/test/resources/properties/log4j.properties
+++ b/src/test/resources/properties/log4j.properties
@@ -1,14 +1,12 @@
 # Set the root logger level to INFO and its only appender to CONSOLE
 log4j.rootLogger=INFO, CONSOLE
-
 # Define the console appender
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d [%t] %-5p %c{1} - %m%n
-
 # Set the logger for your CoursesPage class to INFO level
 log4j.logger.pages.web.CoursesPage.java=INFO
-log4j.logger.tests.api.arzamas.AuthorizationAPITests.java=INFO
-log4j.logger.tests.end2end.arzamas.SubPurchaseTests.java=INFO
+log4j.logger.tests.api.AuthorizationAPITests.java=INFO
+log4j.logger.tests.end2end.SubPurchaseTests.java=INFO
 # Redirect SLF4J loggers to Log4j
 log4j.logger.org.slf4j=ERROR
